--- a/style.css
+++ b/style.css
@@ -43,6 +43,16 @@ body {
     z-index: -1;
     pointer-events: none;
 }
+.dark-matter-bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+    pointer-events: none;
+}
+[data-theme="light"] .dark-matter-bg { opacity: 0; }
 .cursor-glow {
     position: fixed;
     width: 700px;
